register screen design

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js,.jsx"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
@@ -16,6 +17,7 @@
     "@reduxjs/toolkit": "^1.8.4",
     "expo": "~46.0.8",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.15.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
@@ -32,6 +34,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "eslint": "^8.31.0",
+    "prettier": "^2.8.2",
     "tailwindcss": "^3.1.8"
   },
   "private": true
