--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "react-native": "0.69.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-heroicons": "^2.2.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
